--- a/ray-tracer/ray-tracer/ray-tracer.vcxproj
+++ b/ray-tracer/ray-tracer/ray-tracer.vcxproj
@@ -134,17 +134,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="aabb.cpp" />
-    <ClCompile Include="app.cpp" />
     <ClCompile Include="bvh.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="canvas.cpp" />
     <ClCompile Include="glad.c" />
-    <ClCompile Include="gl_renderer.cpp" />
+    <ClCompile Include="workbench.cpp" />
     <ClCompile Include="hittable_list.cpp" />
     <ClCompile Include="interval.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="material.cpp" />
-    <ClCompile Include="png_renderer.cpp" />
+    <ClCompile Include="photorealistic.cpp" />
     <ClCompile Include="rand.cpp" />
     <ClCompile Include="ray.cpp" />
     <ClCompile Include="raytracer.cpp" />
@@ -156,24 +155,22 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="aabb.hpp" />
-    <ClInclude Include="app.hpp" />
     <ClInclude Include="bvh.hpp" />
     <ClInclude Include="camera.hpp" />
     <ClInclude Include="canvas.hpp" />
     <ClInclude Include="config.hpp" />
     <ClInclude Include="glad.h" />
-    <ClInclude Include="gl_renderer.hpp" />
+    <ClInclude Include="workbench.hpp" />
     <ClInclude Include="hittable.hpp" />
     <ClInclude Include="hittable_list.hpp" />
     <ClInclude Include="interval.hpp" />
     <ClInclude Include="khrplatform.h" />
     <ClInclude Include="material.hpp" />
-    <ClInclude Include="png_renderer.hpp" />
+    <ClInclude Include="photorealistic.hpp" />
     <ClInclude Include="quad.hpp" />
     <ClInclude Include="rand.hpp" />
     <ClInclude Include="ray.hpp" />
     <ClInclude Include="raytracer.hpp" />
-    <ClInclude Include="renderer.hpp" />
     <ClInclude Include="scene.hpp" />
     <ClInclude Include="sphere.hpp" />
     <ClInclude Include="stb_image.h" />
