--- a/ray-tracer/ray-tracer/ray-tracer.vcxproj.filters
+++ b/ray-tracer/ray-tracer/ray-tracer.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="aabb.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="app.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="bvh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -30,7 +27,7 @@
     <ClCompile Include="canvas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="gl_renderer.cpp">
+    <ClCompile Include="workbench.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="hittable_list.cpp">
@@ -45,7 +42,7 @@
     <ClCompile Include="material.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="png_renderer.cpp">
+    <ClCompile Include="photorealistic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rand.cpp">
@@ -80,9 +77,6 @@
     <ClInclude Include="aabb.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="app.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="bvh.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -95,7 +89,7 @@
     <ClInclude Include="config.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="gl_renderer.hpp">
+    <ClInclude Include="workbench.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hittable.hpp">
@@ -110,7 +104,7 @@
     <ClInclude Include="material.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="png_renderer.hpp">
+    <ClInclude Include="photorealistic.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="quad.hpp">
@@ -123,9 +117,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="raytracer.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="renderer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="scene.hpp">
